Fixes work section overlapping sidebar

--- a/assets/css/3-modules/_header.sass
+++ b/assets/css/3-modules/_header.sass
@@ -3,11 +3,12 @@
     top: 0
     bottom: 0
     left: 0
-    background: rgba(0,0,0,0.6)
+    background: rgba(102,102,102,1)
     width: 250px
     +animation(fadeInRight 1s ease-in-out 600ms both)
     +transition()
     box-shadow: inset -5px 0px 10px 0px rgba(0,0,0,0.4)
+    z-index: 100
 
 .hide-sidebar
     .sidebar
@@ -28,7 +29,7 @@
     position: fixed
     left: 250px
     top: 0
-    z-index: 1
+    z-index: 100
     +transition()
     
     &:hover
