--- a/assets/css/3-modules/_work.sass
+++ b/assets/css/3-modules/_work.sass
@@ -21,6 +21,7 @@
 .thumb-container
     max-width: 960px
     margin: 0 auto
+    display: block
     
     .thumb-unit
         cursor: pointer
